# apifor.dev

./: .gitignore  API.md  ARQUITETURA.md  ApiFor Dashboard.dc.html  LOGICA-DE-NEGOCIO.md  OVERVIEW.md  PRODUCTION.md  PROTOCOLO.md  README.md  ROADMAP.md  SCHEMA-DADOS.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
app/: .gitignore  Makefile  README.md  buf.gen.yaml  docker-compose.prod.yml  docker-compose.yml
app/auth-sidecar/: Dockerfile  server.py
app/cerebro/: Dockerfile  go.mod  go.sum
app/dashboard/: .gitignore  next.config.mjs  package-lock.json  package.json
app/deploy/: apifor-executor.service  dev.apifor.executor.plist  install.sh
app/desktop/: README.md  package-lock.json  package.json
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/src/: main.rs
app/executor/: Cargo.toml  Dockerfile  build.rs
app/executor/proto/: apifor.proto
app/executor/src/: exec.rs  ipc.rs  main.rs  relay.rs  tlsid.rs  vault.rs
app/sample/: README.md  main.go
app/scripts/: billing-demo.sh  ci-smoke.sh  enforce-demo.sh  full-system-test.sh  hardening-demo.sh  knowledge-demo.sh  pipeline-demo.sh  pr-demo.sh  prod-posture.sh  rbac-demo.sh  relay-demo.sh  routines-demo.sh
contracts/openapi/: openapi.yaml
contracts/sql/: 001_schema.sql  002_rls.sql  003_seeds.sql  004_rls_role.sql  (+3 more)
paginas/: ajuda.dc.html  assinatura.dc.html  ci.dc.html  cloud.dc.html  config.dc.html  conta.dc.html  dashboard.dc.html  faturas.dc.html  fila.dc.html  index.html  intervencao.dc.html  live.dc.html  login.dc.html  logs.dc.html  organizacao.dc.html  prs.dc.html  qa.dc.html  rotinas.dc.html  tarefas.dc.html  telemetria.dc.html  uso.dc.html  web.dc.html
(+48 files in other folders)
