[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "executor"
path = "src/main.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "io-util"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
strip = true
